k8s/ingress.yaml
# Fichero ingress para exposición de servicio web
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: frontend-ingress
spec:
  rules:
  - host: keepcoding.35.205.111.22.nip.io
    http:
      paths:
      - backend:
          serviceName: web-frontend
          servicePort: 80
